public-api 정정검사후 수정
